--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <!-- 좌측 사이드바 광고 -->
@@ -166,3 +166,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
