--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="js/main.js"></script>
+    <!-- Dynamic Recipes JS -->
+    <script src="js/dynamic-recipes.js"></script>
 </body>
 </html>
-
