--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -17,8 +17,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <i class="fas fa-utensils me-2"></i>맛있는 레시피
-            </a>
+    <i class="fas fa-utensils me-2"></i>
+    <div class="brand-text">
+        <div class="brand-subtitle">건강한 한끼</div>
+        <div class="brand-title">마이레시피</div>
+    </div>
+</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -95,3 +99,4 @@
     <script src="js/recipe_detail.js"></script>
 </body>
 </html>
+
