--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -10,19 +10,18 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/recipe_detail.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-    <i class="fas fa-utensils me-2"></i>
-    <div class="brand-text">
-        <div class="brand-subtitle">건강한 한끼</div>
-        <div class="brand-title">마이레시피</div>
-    </div>
-</a>
+                <i class="fas fa-utensils me-2"></i>
+                <div class="brand-text">
+                    <div class="brand-subtitle">건강한 한끼</div>
+                    <div class="brand-title">마이레시피</div>
+                </div>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -96,7 +95,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/api-integration.js"></script>
     <script src="js/recipe_detail.js"></script>
 </body>
 </html>
-
